# rust-pg-benchmark

./: .gitignore  Cargo.toml  README.md  compose.yml  init.sql  run_benchmarks.sh  update_docs.sh
.github/workflows/: benchmark.yml
benches/: database_bench.rs
benchmarks/: RESULTS.md
benchmarks/aggregate_count_posts_per_user/clorinde/new/: benchmark.json  sample.json  tukey.json
benchmarks/aggregate_count_posts_per_user/diesel/base/: benchmark.json  tukey.json
benchmarks/aggregate_count_posts_per_user/diesel/report/: index.html
benchmarks/aggregate_count_posts_per_user/report/: index.html
benchmarks/aggregate_count_posts_per_user/sqlx/base/: estimates.json
benchmarks/aggregate_count_posts_per_user/sqlx/new/: benchmark.json
benchmarks/aggregate_count_posts_per_user/tokio_postgres/base/: estimates.json  sample.json
benchmarks/aggregate_count_posts_per_user/tokio_postgres/new/: tukey.json
benchmarks/aggregate_count_posts_per_user/tokio_postgres/report/: index.html
benchmarks/concurrent_reads/50/report/: index.html
benchmarks/concurrent_reads/diesel/report/: index.html
benchmarks/concurrent_reads/report/: index.html
benchmarks/concurrent_reads/sea_orm/report/: index.html
benchmarks/insert_single_user/clorinde/base/: benchmark.json
benchmarks/insert_single_user/clorinde/change/: estimates.json
benchmarks/insert_single_user/clorinde/new/: estimates.json  tukey.json
benchmarks/report/: index.html
benchmarks/select_user_by_id/report/: index.html
clorinde_queries/: Cargo.toml
clorinde_queries/src/: lib.rs
docs/benchmarks/: index.html
src/: bench_clorinde.rs  bench_diesel.rs  bench_seaorm.rs  bench_sqlx.rs  bench_tokio_postgres.rs  lib.rs  main.rs
(+230 files in other folders)
