[package]
name = "pg-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rand = "0.8"

# Database libraries
tokio-postgres = { version = "0.7", features = [
  "with-uuid-1",
  "with-chrono-0_4",
] }
postgres = { version = "0.19", features = [
  "with-uuid-1",
  "with-chrono-0_4",
] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
] }
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
diesel = { version = "2.2", features = [
  "postgres",
  "uuid",
  "chrono",
  "r2d2",
] }

# Clorinde generated crate (will be generated)
clorinde_queries = { path = "./clorinde_queries" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-util = "0.7"
futures = "0.3"

[dev-dependencies]
once_cell = "1.19"

[[bench]]
name = "database_bench"
harness = false
