[package]
name = "clorinde_queries"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4" }
futures = "0.3"
